--- a/getRegistration/templates/registration/login.html
+++ b/getRegistration/templates/registration/login.html
@@ -1,6 +1,6 @@
 <form>
 
-</form><form method=POST>
+</form><form method="POST">
     {% csrf_token %}
     {{ form }}
     <button type=submit>Submit</button>
