--- a/getRegistration/templates/registration/signup.html
+++ b/getRegistration/templates/registration/signup.html
@@ -1,6 +1,11 @@
+
+{% extends base.html %}
+
+{% block content %}
 <form method="POST">
     {% csrf_token %}
     {{ form }}
     <button type=submit>Submit</button>
 
 </form>
+{% endblock content %}
