--- a/getRegistration/templates/registration/signup.html
+++ b/getRegistration/templates/registration/signup.html
@@ -1,5 +1,5 @@
 
-{% extends base.html %}
+{% extends "base.html" %}
 
 {% block content %}
 <form method="POST">
@@ -8,4 +8,7 @@
     <button type=submit>Submit</button>
 
 </form>
+
+<p>Already heve an account? <a href="{% url "login" %}"> Login</a></p>
+
 {% endblock content %}
