--- a/getRegistration/templates/registration/index.html
+++ b/getRegistration/templates/registration/index.html
@@ -1,6 +1,15 @@
 
-{% extends base.html %}
+{% extends "base.html" %}
 
 {% block content %}
 <h> hello Walid Ayaan Kawsar </h>
+
+
+
+{% if user.is_authenticated %}
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+    </form>
+{% endif %}
 {% endblock content %}
