--- a/getRegistration/templates/registration/login.html
+++ b/getRegistration/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form>
 
-</form><form method="POST">
+
+<form method="POST">
     {% csrf_token %}
     {{ form }}
     <button type=submit>Submit</button>
